<resources>
    <string name="app_name">MyAppPortfolio</string>

    <string name="main_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>

    <string name="streamer">SPOTIFY STREAMER</string>
    <string name="scores">SCORES APP</string>
    <string name="library">LIBRARY APP</string>
    <string name="bigger">BUILT IT BIGGER</string>
    <string name="reader">XYZ READER</string>
    <string name="own">CAPSTONE: MY OWN APP</string>
</resources>
